TEST_PROGRAMS/INVALID/shivan_sahib/missing_then.min
if "x" 
	print "hi";
endif

